--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-I am Heng-Cheng Kuo, nice to meet you!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Personal Page</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="container">
+        <div class="content">
+            <h1>Heng-Cheng Kuo</h1>
+            <p>I am currently a second-year Master's student in the Data Science Master Degree Program at National Taiwan University. I am working with Prof. <a href="https://speech.ee.ntu.edu.tw/~hylee/index.php">Hung-yi Lee</a> and Prof. <a href="https://bio-asplab.citi.sinica.edu.tw/">Yu Tsao.</p>
+            <p>Prior to that, I received my B.S. degree in EE at National Taiwan University. I worked with <a href="https://speech.ee.ntu.edu.tw/previous_version/lslNew.htm">Prof. Lin-shan Lee</a> at the Speech Processing Lab.</p>
+            <p>My research interests include <strong>Anti-Spoofing<\strong>, <strong>Speech Editing<\strong>, and <strong>Self-Supervised Learning</strong>.</p>
+        </div>
+    </div>
+</body>
+</html>
