--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <div class="content">
             <h1>Heng-Cheng Kuo</h1>
             <p>I am currently a second-year Master's student in the Data Science Master Degree Program at National Taiwan University. I am working with Prof. <a href="https://speech.ee.ntu.edu.tw/~hylee/index.php">Hung-yi Lee</a> and Prof. <a href="https://bio-asplab.citi.sinica.edu.tw/">Yu Tsao</a>.</p>
-            <p>Prior to that, I received my B.S. degree in EE at National Taiwan University. I worked with <a href="https://speech.ee.ntu.edu.tw/previous_version/lslNew.htm">Prof. Lin-shan Lee</a> at the Speech Processing Lab.</p>
-            <p>My research interests include <strong>Anti-Spoofing</strong>strong>, <strong>Speech Editing</strong>strong>, and <strong>Self-Supervised Learning</strong>.</p>
+            <p>Prior to that, I received my B.S. degree in EE at National Taiwan University. I worked with Prof. <a href="https://speech.ee.ntu.edu.tw/previous_version/lslNew.htm">Lin-shan Lee</a> at the Speech Processing Lab.</p>
+            <p>My research interests include <strong>Anti-Spoofing</strong>, <strong>Speech Editing</strong>, and <strong>Self-Supervised Learning</strong>.</p>
         </div>
     </div>
 </body>
