Update index.html (Conference)

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <div class="container">
         <div class="content">
             <h1>Journal Publications</h1>
+            <p><strong>Toward Real-World Voice Disorder Classification</strong></p>
+            <p><strong>Domain-adaptive Fall Detection Using Deep Adversarial Training</strong></p>
         </div>
     </div>
 </body>
@@ -30,6 +32,14 @@
     <div class="container">
         <div class="content">
             <h1>Conference Publications</h1>
+            <p><strong>VoiceNoNG: High-Quality Speech Editing Model Without Hallucinations</strong></p>
+            <p><strong>Detecting The Undetectable: Assessing The Efficacy of Current Spoof Detection Methods against Seamless Speech Edits</strong></p>
+            <p><strong>Scalable Ensemble-based Detection Method against Adversarial Attacks for Speaker Verification</strong></p>
+            <p><strong>Study on the Correlation between Objective Evaluations and Subjective Speech Quality and Intelligibility</strong></p>
+            <p><strong>Voice Direction-of-Arrival Conversion</strong></p>
+            <p><strong>Partially Fake Audio Detection by Self-attention-based Fake Span Discovery</strong></p>
+            <p><strong>Key Generation with Ambient Audio</strong></p>
+            <p><strong>Boosting Objective Scores of a Speech Enhancement Model by MetricGAN Post-processing</strong></p>
         </div>
     </div>
 </body>
