--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <div class="content">
             <h1>Journal Publications</h1>
             <p><strong>Toward Real-World Voice Disorder Classification</strong></p>
+            <p>Heng-Cheng Kuo, Yu-Peng Hsieh, Huan-Hsin Tseng, Chi-Te Wang, Shih-Hau Fang, Yu Tsao</p>
+            <p></p>
             <p><strong>Domain-adaptive Fall Detection Using Deep Adversarial Training</strong></p>
         </div>
     </div>
