Update index.html (Journal)

--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
     <div class="container">
         <div class="content">
             <h1>Journal Publications</h1>
-            <p><strong>Toward Real-World Voice Disorder Classification</strong></p>
-            <p>Heng-Cheng Kuo, Yu-Peng Hsieh, Huan-Hsin Tseng, Chi-Te Wang, Shih-Hau Fang, Yu Tsao</p>
+            <p><strong>Toward Real-World Voice Disorder Classification</strong><br>Heng-Cheng Kuo, Yu-Peng Hsieh, Huan-Hsin Tseng, Chi-Te Wang, Shih-Hau Fang, Yu Tsao</p>
             <p></p>
-            <p><strong>Domain-adaptive Fall Detection Using Deep Adversarial Training</strong></p>
+            <p><trong>Domain-adaptive Fall Detection Using Deep Adversarial Training</strong><br>Kai-Chun Liu, Michael Chan, Heng-Cheng Kuo, Chia-Yeh Hsieh, Hsiang-Yun Huang, Chia-Tai Chan, Yu Tsao</p>
         </div>
     </div>
 </body>
