Update index.html (All authors)

--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
     <div class="container">
         <div class="content">
             <h1>Journal Publications</h1>
-            <p><strong>Toward Real-World Voice Disorder Classification</strong><br>Heng-Cheng Kuo, Yu-Peng Hsieh, Huan-Hsin Tseng, Chi-Te Wang, Shih-Hau Fang, Yu Tsao</p>
-            <p></p>
-            <p><trong>Domain-adaptive Fall Detection Using Deep Adversarial Training</strong><br>Kai-Chun Liu, Michael Chan, Heng-Cheng Kuo, Chia-Yeh Hsieh, Hsiang-Yun Huang, Chia-Tai Chan, Yu Tsao</p>
+            <p><strong>Toward Real-World Voice Disorder Classification</strong>
+                <br>Heng-Cheng Kuo, Yu-Peng Hsieh, Huan-Hsin Tseng, Chi-Te Wang, Shih-Hau Fang, Yu Tsao</p>
+            <p><strong>Domain-adaptive Fall Detection Using Deep Adversarial Training</strong>
+                <br>Kai-Chun Liu, Michael Chan, Heng-Cheng Kuo, Chia-Yeh Hsieh, Hsiang-Yun Huang, Chia-Tai Chan, Yu Tsao</p>
         </div>
     </div>
 </body>
@@ -33,14 +34,22 @@
     <div class="container">
         <div class="content">
             <h1>Conference Publications</h1>
-            <p><strong>VoiceNoNG: High-Quality Speech Editing Model Without Hallucinations</strong></p>
-            <p><strong>Detecting The Undetectable: Assessing The Efficacy of Current Spoof Detection Methods against Seamless Speech Edits</strong></p>
-            <p><strong>Scalable Ensemble-based Detection Method against Adversarial Attacks for Speaker Verification</strong></p>
-            <p><strong>Study on the Correlation between Objective Evaluations and Subjective Speech Quality and Intelligibility</strong></p>
-            <p><strong>Voice Direction-of-Arrival Conversion</strong></p>
-            <p><strong>Partially Fake Audio Detection by Self-attention-based Fake Span Discovery</strong></p>
-            <p><strong>Key Generation with Ambient Audio</strong></p>
-            <p><strong>Boosting Objective Scores of a Speech Enhancement Model by MetricGAN Post-processing</strong></p>
+            <p><strong>VoiceNoNG: High-Quality Speech Editing Model Without Hallucinations</strong>
+                <br>Sung-Feng Huang*, Heng-Cheng Kuo*, Zhehuai Chen, Xuesong Yang, Pin-Jui Ku, Ante Jukić, Chao-Han Huck Yang, Yu Tsao, Yu-Chiang Frank Wang, Hung-yi Lee, Szu-Wei Fu</p>
+            <p><strong>Detecting The Undetectable: Assessing The Efficacy of Current Spoof Detection Methods against Seamless Speech Edits</strong>
+                <br>Sung-Feng Huang, Heng-Cheng Kuo, Zhehuai Chen, Xuesong Yang, Huck Yang, Yu Tsao, Yu-Chiang Frank Wang, Hung-yi Lee, Szu-Wei Fu</p>
+            <p><strong>Scalable Ensemble-based Detection Method against Adversarial Attacks for Speaker Verification</strong>
+                <br>Haibin Wu, Heng-Cheng Kuo, Yu Tsao, Hung-yi Lee</p>
+            <p><strong>Study on the Correlation between Objective Evaluations and Subjective Speech Quality and Intelligibility</strong>
+                <br>Hsin-Tien Chiang, Kuo-Hsuan Hung, Szu-Wei Fu, Heng-Cheng Kuo, Ming-Hsueh Tsai, Yu Tsao</p>
+            <p><strong>Voice Direction-of-Arrival Conversion</strong>
+                <br>I-Chun Chern, Steffi Chern, Heng-Cheng Kuo, Huan-Hsin Tseng, Kuo-Hsuan Hung, Yu Tsao</p>
+            <p><strong>Partially Fake Audio Detection by Self-attention-based Fake Span Discovery</strong>
+                <br>Haibin Wu, Heng-Cheng Kuo, Naijun Zheng, Kuo-Hsuan Hung, Hung-Yi Lee, Yu Tsao, Hsin-Min Wang, Helen Meng</p>
+            <p><strong>Key Generation with Ambient Audio</strong>
+                <br>Bo-Rong Chen, Hsin-Tien Chiang, Heng-Cheng Kuo, Yu Tsao, Yih-Chun Hu</p>
+            <p><strong>Boosting Objective Scores of a Speech Enhancement Model by MetricGAN Post-processing</strong>
+                <br>Szu-Wei Fu, Chien-Feng Liao, Tsun-An Hsieh, Kuo-Hsuan Hung, Syu-Siang Wang, Cheng Yu, Heng-Cheng Kuo, Ryandhimas E. Zezario, You-Jin Li, Shang-Yi Chuang, Yen-Ju Lu, Yu Tsao</p>
         </div>
     </div>
 </body>
