Update index.html (Complete publications)

--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
         <div class="content">
             <h1>Journal Publications</h1>
             <p><strong>Toward Real-World Voice Disorder Classification</strong>
-                <br>Heng-Cheng Kuo, Yu-Peng Hsieh, Huan-Hsin Tseng, Chi-Te Wang, Shih-Hau Fang, Yu Tsao</p>
+                <br><u>Heng-Cheng Kuo</u>, Yu-Peng Hsieh, Huan-Hsin Tseng, Chi-Te Wang, Shih-Hau Fang, Yu Tsao
+                <br><i>2023 IEEE Transactions on Biomedical Engineering, Vol. 70, No. 10</i></p>
             <p><strong>Domain-adaptive Fall Detection Using Deep Adversarial Training</strong>
-                <br>Kai-Chun Liu, Michael Chan, Heng-Cheng Kuo, Chia-Yeh Hsieh, Hsiang-Yun Huang, Chia-Tai Chan, Yu Tsao</p>
+                <br>Kai-Chun Liu, Michael Chan, <u>Heng-Cheng Kuo</u>, Chia-Yeh Hsieh, Hsiang-Yun Huang, Chia-Tai Chan, Yu Tsao
+                <br><i>2021 IEEE Transactions on Neural Systems and Rehabilitation Engineering, Vol. 29</i></p>
         </div>
     </div>
 </body>
@@ -35,21 +37,29 @@
         <div class="content">
             <h1>Conference Publications</h1>
             <p><strong>VoiceNoNG: High-Quality Speech Editing Model Without Hallucinations</strong>
-                <br>Sung-Feng Huang*, Heng-Cheng Kuo*, Zhehuai Chen, Xuesong Yang, Pin-Jui Ku, Ante Jukić, Chao-Han Huck Yang, Yu Tsao, Yu-Chiang Frank Wang, Hung-yi Lee, Szu-Wei Fu</p>
+                <br>Sung-Feng Huang*, <u>Heng-Cheng Kuo</u>*, Zhehuai Chen, Xuesong Yang, Pin-Jui Ku, Ante Jukić, Chao-Han Huck Yang, Yu Tsao, Yu-Chiang Frank Wang, Hung-yi Lee, Szu-Wei Fu
+                <br><i>In Submission</i></p>
             <p><strong>Detecting The Undetectable: Assessing The Efficacy of Current Spoof Detection Methods against Seamless Speech Edits</strong>
-                <br>Sung-Feng Huang, Heng-Cheng Kuo, Zhehuai Chen, Xuesong Yang, Huck Yang, Yu Tsao, Yu-Chiang Frank Wang, Hung-yi Lee, Szu-Wei Fu</p>
+                <br>Sung-Feng Huang, <u>Heng-Cheng Kuo</u>, Zhehuai Chen, Xuesong Yang, Huck Yang, Yu Tsao, Yu-Chiang Frank Wang, Hung-yi Lee, Szu-Wei Fu
+                <br><i>2024 IEEE Spoken Language Technology Workshop</i></p>
             <p><strong>Scalable Ensemble-based Detection Method against Adversarial Attacks for Speaker Verification</strong>
-                <br>Haibin Wu, Heng-Cheng Kuo, Yu Tsao, Hung-yi Lee</p>
+                <br>Haibin Wu, <u>Heng-Cheng Kuo</u>, Yu Tsao, Hung-yi Lee
+                <br><i>2024 IEEE International Conference on Acoustics, Speech and Signal Processing</i></p>
             <p><strong>Study on the Correlation between Objective Evaluations and Subjective Speech Quality and Intelligibility</strong>
-                <br>Hsin-Tien Chiang, Kuo-Hsuan Hung, Szu-Wei Fu, Heng-Cheng Kuo, Ming-Hsueh Tsai, Yu Tsao</p>
+                <br>Hsin-Tien Chiang, Kuo-Hsuan Hung, Szu-Wei Fu, <u>Heng-Cheng Kuo</u>, Ming-Hsueh Tsai, Yu Tsao
+                <br><i>2023 Workshop on Automatic Speech Recognition and Understanding</i></p>
             <p><strong>Voice Direction-of-Arrival Conversion</strong>
-                <br>I-Chun Chern, Steffi Chern, Heng-Cheng Kuo, Huan-Hsin Tseng, Kuo-Hsuan Hung, Yu Tsao</p>
+                <br>I-Chun Chern, Steffi Chern, <u>Heng-Cheng Kuo</u>, Huan-Hsin Tseng, Kuo-Hsuan Hung, Yu Tsao
+                <br><i>2023 IEEE International Workshop on Machine Learning for Signal Processing</i></p>
             <p><strong>Partially Fake Audio Detection by Self-attention-based Fake Span Discovery</strong>
-                <br>Haibin Wu, Heng-Cheng Kuo, Naijun Zheng, Kuo-Hsuan Hung, Hung-Yi Lee, Yu Tsao, Hsin-Min Wang, Helen Meng</p>
+                <br>Haibin Wu, <u>Heng-Cheng Kuo</u>, Naijun Zheng, Kuo-Hsuan Hung, Hung-Yi Lee, Yu Tsao, Hsin-Min Wang, Helen Meng
+                <br><i>2022 IEEE International Conference on Acoustics, Speech and Signal Processing</i></p>
             <p><strong>Key Generation with Ambient Audio</strong>
-                <br>Bo-Rong Chen, Hsin-Tien Chiang, Heng-Cheng Kuo, Yu Tsao, Yih-Chun Hu</p>
+                <br>Bo-Rong Chen, Hsin-Tien Chiang, <u>Heng-Cheng Kuo</u>, Yu Tsao, Yih-Chun Hu
+                <br><i>2022 IEEE Global Communications Conference</i></p>
             <p><strong>Boosting Objective Scores of a Speech Enhancement Model by MetricGAN Post-processing</strong>
-                <br>Szu-Wei Fu, Chien-Feng Liao, Tsun-An Hsieh, Kuo-Hsuan Hung, Syu-Siang Wang, Cheng Yu, Heng-Cheng Kuo, Ryandhimas E. Zezario, You-Jin Li, Shang-Yi Chuang, Yen-Ju Lu, Yu Tsao</p>
+                <br>Szu-Wei Fu, Chien-Feng Liao, Tsun-An Hsieh, Kuo-Hsuan Hung, Syu-Siang Wang, Cheng Yu, <u>Heng-Cheng Kuo</u>, Ryandhimas E. Zezario, You-Jin Li, Shang-Yi Chuang, Yen-Ju Lu, Yu Tsao
+                <br><i>2020 Asia-Pacific Signal and Information Processing Association Conference</i></p>
         </div>
     </div>
 </body>
