Update index.html (Awards)

--- a/index.html
+++ b/index.html
@@ -63,4 +63,15 @@
         </div>
     </div>
 </body>
+
+
+<body>
+    <div class="container">
+        <div class="content">
+            <h1>Awards</h1>
+            <p>Won <strong>1st</strong> place in the Multi-Object Tracking with Reidentification track of the MaCVi challenge at WaCV 2024.</p>
+            <p>Won <strong>2nd</strong> place in the Partially Fake Audio Detection track of the ADD challenge at ICASSP 2022.</p>
+        </div>
+    </div>
+</body>
 </html>
