Update index.html <Link>

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
                 <br><i class="fas fa-file-pdf"></i>[<a href="https://ieeexplore.ieee.org/document/10109168">PDF</a>]</p>
             <p><strong>Domain-adaptive Fall Detection Using Deep Adversarial Training</strong>
                 <br>Kai-Chun Liu, Michael Chan, <u>Heng-Cheng Kuo</u>, Chia-Yeh Hsieh, Hsiang-Yun Huang, Chia-Tai Chan, Yu Tsao
-                <br><i>2021 IEEE Transactions on Neural Systems and Rehabilitation Engineering, Vol. 29</i><br><a href=""></a></p>
+                <br><i>2021 IEEE Transactions on Neural Systems and Rehabilitation Engineering, Vol. 29</i><br><a href=""></a>
+                <br><i class="fas fa-file-pdf"></i>[<a href="https://ieeexplore.ieee.org/abstract/document/9456857">PDF</a>]</p>
         </div>
     </div>
 </body>
@@ -43,25 +44,32 @@
                 <br><i>In Submission</i></p>
             <p><strong>Detecting The Undetectable: Assessing The Efficacy of Current Spoof Detection Methods against Seamless Speech Edits</strong>
                 <br>Sung-Feng Huang, <u>Heng-Cheng Kuo</u>, Zhehuai Chen, Xuesong Yang, Huck Yang, Yu Tsao, Yu-Chiang Frank Wang, Hung-yi Lee, Szu-Wei Fu
-                <br><i>2024 IEEE Spoken Language Technology Workshop</i></p>
+                <br><i>2024 IEEE Spoken Language Technology Workshop</i>
+                <br><i class="fas fa-file-pdf"></i>[<a href="https://research.nvidia.com/labs/twn/publication/slt_2024_sine/">PDF</a>]</p>
             <p><strong>Scalable Ensemble-based Detection Method against Adversarial Attacks for Speaker Verification</strong>
                 <br>Haibin Wu, <u>Heng-Cheng Kuo</u>, Yu Tsao, Hung-yi Lee
-                <br><i>2024 IEEE International Conference on Acoustics, Speech and Signal Processing</i></p>
+                <br><i>2024 IEEE International Conference on Acoustics, Speech and Signal Processing</i>
+                <br><i class="fas fa-file-pdf"></i>[<a href="https://arxiv.org/abs/2312.08622">PDF</a>]</p>
             <p><strong>Study on the Correlation between Objective Evaluations and Subjective Speech Quality and Intelligibility</strong>
                 <br>Hsin-Tien Chiang, Kuo-Hsuan Hung, Szu-Wei Fu, <u>Heng-Cheng Kuo</u>, Ming-Hsueh Tsai, Yu Tsao
-                <br><i>2023 Workshop on Automatic Speech Recognition and Understanding</i></p>
+                <br><i>2023 Workshop on Automatic Speech Recognition and Understanding</i>
+                <br><i class="fas fa-file-pdf"></i>[<a href="https://arxiv.org/abs/2307.04517">PDF</a>]</p>
             <p><strong>Voice Direction-of-Arrival Conversion</strong>
                 <br>I-Chun Chern, Steffi Chern, <u>Heng-Cheng Kuo</u>, Huan-Hsin Tseng, Kuo-Hsuan Hung, Yu Tsao
-                <br><i>2023 IEEE International Workshop on Machine Learning for Signal Processing</i></p>
+                <br><i>2023 IEEE International Workshop on Machine Learning for Signal Processing</i>
+                <br><i class="fas fa-file-pdf"></i>[<a href="https://ieeexplore.ieee.org/document/10285936">PDF</a>]</p>
             <p><strong>Partially Fake Audio Detection by Self-attention-based Fake Span Discovery</strong>
                 <br>Haibin Wu, <u>Heng-Cheng Kuo</u>, Naijun Zheng, Kuo-Hsuan Hung, Hung-Yi Lee, Yu Tsao, Hsin-Min Wang, Helen Meng
-                <br><i>2022 IEEE International Conference on Acoustics, Speech and Signal Processing</i></p>
+                <br><i>2022 IEEE International Conference on Acoustics, Speech and Signal Processing</i>
+                <br><i class="fas fa-file-pdf"></i>[<a href="https://arxiv.org/abs/2202.06684">PDF</a>]</p>
             <p><strong>Key Generation with Ambient Audio</strong>
                 <br>Bo-Rong Chen, Hsin-Tien Chiang, <u>Heng-Cheng Kuo</u>, Yu Tsao, Yih-Chun Hu
-                <br><i>2022 IEEE Global Communications Conference</i></p>
+                <br><i>2022 IEEE Global Communications Conference</i>
+                <br><i class="fas fa-file-pdf"></i>[<a href="https://ieeexplore.ieee.org/document/10001118">PDF</a>]</p>
             <p><strong>Boosting Objective Scores of a Speech Enhancement Model by MetricGAN Post-processing</strong>
                 <br>Szu-Wei Fu, Chien-Feng Liao, Tsun-An Hsieh, Kuo-Hsuan Hung, Syu-Siang Wang, Cheng Yu, <u>Heng-Cheng Kuo</u>, Ryandhimas E. Zezario, You-Jin Li, Shang-Yi Chuang, Yen-Ju Lu, Yu Tsao
-                <br><i>2020 Asia-Pacific Signal and Information Processing Association Conference</i></p>
+                <br><i>2020 Asia-Pacific Signal and Information Processing Association Conference</i>
+                <br><i class="fas fa-file-pdf"></i>[<a href="https://ieeexplore.ieee.org/document/9306484">PDF</a>]</p>
         </div>
     </div>
 </body>
@@ -71,8 +79,8 @@
     <div class="container">
         <div class="content">
             <h1>Awards</h1>
-            <p>Won <strong>1st</strong> place in the Multi-Object Tracking with Reidentification track of the MaCVi challenge at WaCV 2024.</p>
-            <p>Won <strong>2nd</strong> place in the Partially Fake Audio Detection track of the ADD challenge at ICASSP 2022.</p>
+            <p>Won <strong>1st</strong> place in the Multi-Object Tracking with Reidentification track of the <a href="https://macvi.org/workshop/macvi24/challenges/">MaCVi challenge</a> at WaCV 2024.</p>
+            <p>Won <strong>2nd</strong> place in the Partially Fake Audio Detection track of the <a href="http://addchallenge.cn/add2022">ADD challenge</a> at ICASSP 2022.</p>
         </div>
     </div>
 </body>
