Update index.html (Fixed profile)

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="content">
-            <img src="profile.jpg">
+            <img src="profile.jpg" style="width: 300px; height: 300px; position: fixed; top: 10px; right: 10px;">
             <h1>About Me</h1>
             <p>I am Heng-Cheng Kuo, currently a second-year Master's student in the Data Science Master Degree Program at National Taiwan University. I am working with Prof. <a href="https://speech.ee.ntu.edu.tw/~hylee/index.php" target="_blank">Hung-yi Lee</a> and Prof. <a href="https://bio-asplab.citi.sinica.edu.tw/" target="_blank">Yu Tsao</a>.</p>
             <p>Prior to that, I received my B.S. degree in EE at National Taiwan University. I worked with Prof. <a href="https://speech.ee.ntu.edu.tw/previous_version/lslNew.htm" target="_blank">Lin-shan Lee</a> at the Speech Processing Lab.</p>
