Update index.html (Head)

--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Page</title>
+    <title>Heng-Cheng Kuo</title>
+    <style>
+        html {
+            font-size: 18px;
+        }
+        body {
+            margin-left: 20px;
+            margin-right: 20px;
+        }
+    </style>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
@@ -11,7 +20,7 @@
 <body>
     <div class="container">
         <div class="content">
-            <img src="profile.jpg" style="float: right; width: 200px; height: 200px; margin-left: 20px; margin-right: 160px">
+            <img src="profile.jpg" style="float: right; width: 300px; height: 300px; margin-left: 20px; margin-right: 160px">
             <h1>About Me</h1>
             <p>I am Heng-Cheng Kuo, currently a second-year Master's student in the Data Science Master Degree Program at National Taiwan University. I am working with Prof. <a href="https://speech.ee.ntu.edu.tw/~hylee/index.php" target="_blank">Hung-yi Lee</a> and Prof. <a href="https://bio-asplab.citi.sinica.edu.tw/" target="_blank">Yu Tsao</a>.</p>
             <p>Prior to that, I received my B.S. degree in EE at National Taiwan University. I worked with Prof. <a href="https://speech.ee.ntu.edu.tw/previous_version/lslNew.htm" target="_blank">Lin-shan Lee</a> at the Speech Processing Lab.</p>
