Update index.html <Margin>

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <div class="container">
         <div class="content">
-            <img src="profile.jpg" style="float: right; width: 300px; height: 300px; margin-left: 20px; margin-right: 160px">
+            <img src="profile.jpg" style="float: right; width: 300px; height: 300px; margin-left: 20px;">
             <h1>About Me</h1>
             <p>I am Heng-Cheng Kuo, currently a second-year Master's student in the Data Science Master Degree Program at National Taiwan University. I am working with Prof. <a href="https://speech.ee.ntu.edu.tw/~hylee/index.php" target="_blank">Hung-yi Lee</a> and Prof. <a href="https://bio-asplab.citi.sinica.edu.tw/" target="_blank">Yu Tsao</a>.</p>
             <p>Prior to that, I received my B.S. degree in EE at National Taiwan University. I worked with Prof. <a href="https://speech.ee.ntu.edu.tw/previous_version/lslNew.htm" target="_blank">Lin-shan Lee</a> at the Speech Processing Lab.</p>
@@ -50,7 +50,8 @@
         <div class="content">
             <h1>Conference Publications</h1>
             <p><strong>VoiceNoNG: High-Quality Speech Editing Model Without Hallucinations</strong>
-                <br>Sung-Feng Huang*, <u>Heng-Cheng Kuo</u>*, Zhehuai Chen, Xuesong Yang, Pin-Jui Ku, Ante Jukić, Chao-Han Huck Yang, Yu Tsao, Yu-Chiang Frank Wang, Hung-yi Lee, Szu-Wei Fu
+                <br>Sung-Feng Huang*, <u>Heng-Cheng Kuo</u>*, Zhehuai Chen, Xuesong Yang, Pin-Jui Ku, Ante Jukić, Chao-Han Huck Yang, Yu Tsao, Yu-Chiang Frank Wang,
+                <br>Hung-yi Lee, Szu-Wei Fu
                 <br><i>In Submission</i></p>
             <p><strong>Detecting The Undetectable: Assessing The Efficacy of Current Spoof Detection Methods against Seamless Speech Edits</strong>
                 <br>Sung-Feng Huang, <u>Heng-Cheng Kuo</u>, Zhehuai Chen, Xuesong Yang, Huck Yang, Yu Tsao, Yu-Chiang Frank Wang, Hung-yi Lee, Szu-Wei Fu
@@ -77,7 +78,8 @@
                 <br><i>2022 IEEE Global Communications Conference</i>
                 <br><i class="fas fa-file-pdf"></i>[<a href="https://ieeexplore.ieee.org/document/10001118" target="_blank">PDF</a>]</p>
             <p><strong>Boosting Objective Scores of a Speech Enhancement Model by MetricGAN Post-processing</strong>
-                <br>Szu-Wei Fu, Chien-Feng Liao, Tsun-An Hsieh, Kuo-Hsuan Hung, Syu-Siang Wang, Cheng Yu, <u>Heng-Cheng Kuo</u>, Ryandhimas E. Zezario, You-Jin Li, Shang-Yi Chuang, Yen-Ju Lu, Yu Tsao
+                <br>Szu-Wei Fu, Chien-Feng Liao, Tsun-An Hsieh, Kuo-Hsuan Hung, Syu-Siang Wang, Cheng Yu, <u>Heng-Cheng Kuo</u>, Ryandhimas E. Zezario, You-Jin Li,
+                <br>Shang-Yi Chuang, Yen-Ju Lu, Yu Tsao
                 <br><i>2020 Asia-Pacific Signal and Information Processing Association Conference</i>
                 <br><i class="fas fa-file-pdf"></i>[<a href="https://ieeexplore.ieee.org/document/9306484" target="_blank">PDF</a>]</p>
         </div>
