Update About Me

--- a/index.html
+++ b/index.html
@@ -22,10 +22,8 @@
         <div class="content">
             <img src="profile.jpg" style="float: right; width: 300px; height: 300px; margin-left: 20px;">
             <h1>About Me</h1>
-            <p>I am Heng-Cheng Kuo, hold an M.S. in Data Science from National Taiwan University, advised by Prof. <a href="https://speech.ee.ntu.edu.tw/~hylee/index.php" target="_blank">Hung-yi Lee</a> and Prof. <a href="https://bio-asplab.citi.sinica.edu.tw/" target="_blank">Yu Tsao</a>.</p>
-            <p>Prior to that, I received my B.S. degree in EE at National Taiwan University. I worked with Prof. <a href="https://speech.ee.ntu.edu.tw/previous_version/lslNew.htm" target="_blank">Lin-shan Lee</a> at the Speech Processing Lab.</p>
-            <p>My research interests include <strong>Speech Editing</strong>, <strong>Anti-Spoofing</strong>, and <strong>Self-Supervised Learning</strong>.</p>
-            <p>I helped organize the ASVspoof 5 Challenge by supplying participants with pre-trained self-supervised speech models and co-developed the Speech INfilling Edit (SINE) dataset in collaboration with NVIDIA researchers.<\p>
+            <p>I am Heng-Cheng Kuo, hold an M.S. in Data Science from National Taiwan University, advised by Prof. <a href="https://speech.ee.ntu.edu.tw/~hylee/index.php" target="_blank">Hung-yi Lee</a> and Prof. <a href="https://bio-asplab.citi.sinica.edu.tw/" target="_blank">Yu Tsao</a>. Prior to that, I received my B.S. degree in EE at National Taiwan University. I worked with Prof. <a href="https://speech.ee.ntu.edu.tw/previous_version/lslNew.htm" target="_blank">Lin-shan Lee</a> at the Speech Processing Lab.</p>
+            <p>My research interests include <strong>Speech Editing</strong>, <strong>Anti-Spoofing</strong>, and <strong>Self-Supervised Learning</strong>. I helped organize the ASVspoof 5 Challenge by supplying participants with pre-trained self-supervised speech models and co-developed the Speech INfilling Edit (SINE) dataset in collaboration with NVIDIA researchers.</p>
         </div>
     </div>
 </body>
