--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <img src="profile.jpg" style="float: right; width: 300px; height: 300px; margin-left: 20px;">
             <h1>About Me</h1>
             <p>I am Heng-Cheng Kuo, hold an M.S. in Data Science from National Taiwan University, advised by Prof. <a href="https://speech.ee.ntu.edu.tw/~hylee/index.php" target="_blank">Hung-yi Lee</a> and Prof. <a href="https://bio-asplab.citi.sinica.edu.tw/" target="_blank">Yu Tsao</a>. Prior to that, I received my B.S. degree in EE at National Taiwan University. I worked with Prof. <a href="https://speech.ee.ntu.edu.tw/previous_version/lslNew.htm" target="_blank">Lin-shan Lee</a> at the Speech Processing Lab.</p>
-            <p>My research interests include <strong>Speech Editing</strong>, <strong>Anti-Spoofing</strong>, and <strong>Self-Supervised Learning</strong>. I helped organize the ASVspoof 5 Challenge by supplying participants with pre-trained self-supervised speech models and co-developed the Speech INfilling Edit (SINE) dataset in collaboration with NVIDIA researchers.</p>
+            <p>My research interests include <strong>Speech Editing</strong>, <strong>Anti-Spoofing</strong>, and <strong>Self-Supervised Learning</strong>. I helped organize the ASVspoof5 Challenge by supplying participants with pre-trained self-supervised speech models and co-developed the Speech INfilling Edit (SINE) dataset in collaboration with NVIDIA researchers.</p>
         </div>
     </div>
 </body>
@@ -48,6 +48,9 @@
     <div class="container">
         <div class="content">
             <h1>Conference Publications</h1>
+            <p><strong>An Exploration of Mamba for Speech Self-Supervised Models</strong>
+                <br>Tzu-Quan Lin*, <u>Heng-Cheng Kuo</u>u*, Tzu-Chieh Wei, Hsi-Chun Cheng, Chun-Wei Chen, Hsien-Fu Hsiao, Yu Tsao, Hung-yi Lee
+                <br><i>In Submission</i></p>
             <p><strong>VoiceNoNG: High-Quality Speech Editing Model Without Hallucinations</strong>
                 <br>Sung-Feng Huang*, <u>Heng-Cheng Kuo</u>*, Zhehuai Chen, Xuesong Yang, Pin-Jui Ku, Ante Jukić, Chao-Han Huck Yang, Yu Tsao, Yu-Chiang Frank Wang,
                 <br>Hung-yi Lee, Szu-Wei Fu
