--- a/index.html
+++ b/index.html
@@ -51,10 +51,11 @@
             <p><strong>An Exploration of Mamba for Speech Self-Supervised Models</strong>
                 <br>Tzu-Quan Lin*, <u>Heng-Cheng Kuo</u>u*, Tzu-Chieh Wei, Hsi-Chun Cheng, Chun-Wei Chen, Hsien-Fu Hsiao, Yu Tsao, Hung-yi Lee
                 <br><i>In Submission</i></p>
+                <br><i class="fas fa-file-pdf"></i>[<a href="https://arxiv.org/abs/2506.12606" target="_blank">PDF</a>]</p>
             <p><strong>VoiceNoNG: High-Quality Speech Editing Model Without Hallucinations</strong>
-                <br>Sung-Feng Huang*, <u>Heng-Cheng Kuo</u>*, Zhehuai Chen, Xuesong Yang, Pin-Jui Ku, Ante Jukić, Chao-Han Huck Yang, Yu Tsao, Yu-Chiang Frank Wang,
+                <br>Sung-Feng Huang, Heng-Cheng Kuo*, Zhehuai Chen, Xuesong Yang, Pin-Jui Ku, Ante Jukić, Chao-Han Huck Yang, Yu Tsao, Yu-Chiang Frank Wang,
                 <br>Hung-yi Lee, Szu-Wei Fu
-                <br><i>In Submission</i></p>
+                <br><i>2025 IEEE International Conference on Acoustics, Speech and Signal Processing</i></p>
             <p><strong>Detecting The Undetectable: Assessing The Efficacy of Current Spoof Detection Methods against Seamless Speech Edits</strong>
                 <br>Sung-Feng Huang, <u>Heng-Cheng Kuo</u>, Zhehuai Chen, Xuesong Yang, Huck Yang, Yu Tsao, Yu-Chiang Frank Wang, Hung-yi Lee, Szu-Wei Fu
                 <br><i>2024 IEEE Spoken Language Technology Workshop</i>
