Update Conference Publications

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <h1>Conference Publications</h1>
             <p><strong>An Exploration of Mamba for Speech Self-Supervised Models</strong>
                 <br>Tzu-Quan Lin*, <u>Heng-Cheng Kuo</u>u*, Tzu-Chieh Wei, Hsi-Chun Cheng, Chun-Wei Chen, Hsien-Fu Hsiao, Yu Tsao, Hung-yi Lee
-                <br><i>In Submission</i></p>
+                <br><i>In Submission</i>
                 <br><i class="fas fa-file-pdf"></i>[<a href="https://arxiv.org/abs/2506.12606" target="_blank">PDF</a>]</p>
             <p><strong>VoiceNoNG: High-Quality Speech Editing Model Without Hallucinations</strong>
                 <br>Sung-Feng Huang, Heng-Cheng Kuo*, Zhehuai Chen, Xuesong Yang, Pin-Jui Ku, Ante Jukić, Chao-Han Huck Yang, Yu Tsao, Yu-Chiang Frank Wang,
