Update Conference Publications

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <br><i>In Submission</i>
                 <br><i class="fas fa-file-pdf"></i>[<a href="https://arxiv.org/abs/2506.12606" target="_blank">PDF</a>]</p>
             <p><strong>VoiceNoNG: High-Quality Speech Editing Model Without Hallucinations</strong>
-                <br>Sung-Feng Huang, Heng-Cheng Kuo*, Zhehuai Chen, Xuesong Yang, Pin-Jui Ku, Ante Jukić, Chao-Han Huck Yang, Yu Tsao, Yu-Chiang Frank Wang,
+                <br>Sung-Feng Huang, Heng-Cheng Kuo, Zhehuai Chen, Xuesong Yang, Pin-Jui Ku, Ante Jukić, Chao-Han Huck Yang, Yu Tsao, Yu-Chiang Frank Wang,
                 <br>Hung-yi Lee, Szu-Wei Fu
                 <br><i>2025 IEEE International Conference on Acoustics, Speech and Signal Processing</i></p>
             <p><strong>Detecting The Undetectable: Assessing The Efficacy of Current Spoof Detection Methods against Seamless Speech Edits</strong>
