--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
     <div class="container">
         <div class="content">
             <h1>Awards</h1>
-            <p>Won <strong>1st</strong> place in the Multi-Object Tracking with Reidentification track of the <a href="https://macvi.org/workshop/macvi24/challenges/" target="_blank">MaCVi challenge</a> at WaCV 2024.</p>
-            <p>Won <strong>2nd</strong> place in the Partially Fake Audio Detection track of the <a href="http://addchallenge.cn/add2022" target="_blank">ADD challenge</a> at ICASSP 2022.</p>
+            <p>Won <strong>1st</strong> place in the Multi-Object Tracking with Reidentification track of the <a href="https://macvi.org/workshop/macvi24/challenges/" target="_blank">MaCVi challenge</a> at WaCV 2024.
+            <br>Won <strong>2nd</strong> place in the Partially Fake Audio Detection track of the <a href="http://addchallenge.cn/add2022" target="_blank">ADD challenge</a> at ICASSP 2022.</p>
         </div>
     </div>
 </body>
